# autogrp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  client_config.ini.example  config.ini.example  downloader.cpp  downloader.h  logutils.cpp  logutils.h  main.cpp  work_client.cpp  work_client.h  work_queue.cpp  work_queue.h  work_server.cpp  work_server.h
gui/: CMakeLists.txt  analyze_sgf_delegate.cpp  analyze_sgf_delegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progress_view.cpp  progress_view.h  queue_view.cpp  queue_view.h  sgf_table_model.cpp  sgf_table_model.h  work_server_wrapper.cpp  work_server_wrapper.h
include/restinio/: http_server_run.hpp
lib/fmt/: CMakeLists.txt
lib/http-parser/: CMakeLists.txt
rsgf_viewer/: CMakeLists.txt  Sgf.cpp  Sgf.h  calc_debug.cpp  main.cpp  minimal.cpp  move.cpp  move.h  sgf_parser.cpp  sgf_parser.h
src/: CMakeLists.txt  client_main.cpp  config.cpp  config.h  downloader.cpp  downloader.h  logutils.cpp  logutils.h  main.cpp  work_client.cpp  work_client.h  work_queue.cpp  work_queue.h  work_server.cpp  work_server.h
